fix the image bug

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
     <body>
         <h1>魏毅仁</h1>
-        <img src = "assect/image/xszpLoad.jpg" height="200" />
+        <img src = "assect/image/MyPhoto.jpg" height="200" />
         <hr />
 
         <h2>Education</h2>
